# AdventOfCode

./: Cargo.toml  README.md  flake.nix
2022/day03/src/: main.rs
2022/day07/src/: old.rs
2022/day09/src/: main.rs
2022/day1/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/src/: main.rs
2022/day16/src/: main.rs
2022/day17/: Cargo.toml
2022/day17/src/: main.rs
2022/day18/src/: main.rs
2022/day19/: Cargo.toml
2022/day19/src/: dfs.rs  main.rs  test.rs
2022/day2/src/: main.rs
2022/day20/src/: main.rs
2022/day21/: Cargo.toml
2022/day21/src/: main.rs
2022/day22/src/: main.rs
2022/day23/src/: main.rs
2022/day24/: pt.py
2022/day24/src/: main.rs
2022/day25/src/: main.rs
2022/day3/: .gitignore
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day9/src/: main.rs
src/: lib.rs  main.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/aoc2023/: day01.rs  mod.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  mod.rs
tools/: get-input.rs
