[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="7"
itertools="0.10"
pathfinding="4.11.0"
hashbrown = "0.15.2"
ordered-float = "3.4.0"
num-complex = "0.4.6"
num="0.4.3"
aho-corasick = "1.1.3"
regex = "1.11.1"
